--- a/index.html
+++ b/index.html
@@ -2,25 +2,34 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>playing with d3</title>
+    <title>&#9763; Programmes FMR &#9763;</title>
     <style>
-    #program text {
+      #program text {
         fill: black;
-        font: 12px sans-serif;
-    }
-    p {
-      font: 12px sans-serif;
-      margin-top: 8px;
-    }
+        font: 11px sans-serif;
+      }
+      #program body {
+        margin: 3px;
+      }
+      #program p {
+        font: 10px sans-serif;
+        margin: 0;
+      }
+      #program p:nth-child(1) {
+        font-weight: bold;
+      }
+      #program p:nth-child(2) {
+        font-size: 11px;
+      }
     </style>
   </head>
   <body>
-  <script src="lib/d3.v3.js"></script>
-  <script src="script.js"></script>
-  <svg id="program" xmlns="http://www.w3.org/2000/svg"></svg>
-  <script>
-    RadioLD.drawProgram(document.getElementById("program"));
-  </script>
+    <script src="lib/d3.v3.js"></script>
+    <script src="script.js"></script>
+    <svg id="program" xmlns="http://www.w3.org/2000/svg"></svg>
+    <script>
+      RadioLD.drawProgram(document.getElementById("program"));
+    </script>
   </body>
 </html>
 
